# rusdu

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rusdu_rewrite_plan.md
.github/workflows/: ci.yml  nightly.yml
src/: cli.rs  config.rs  delete.rs  format.rs  main.rs  natsort.rs  shell.rs
src/export/: bin_read.rs  bin_write.rs  compress.rs  json_read.rs  json_write.rs  mod.rs
src/scan/: filter.rs  mod.rs  parallel.rs  platform.rs  walker.rs
src/tree/: arena.rs  mod.rs  node.rs  stats.rs
src/ui/: actions.rs  browser.rs  mod.rs  theme.rs
