[package]
name = "rusdu"
version = "0.2.0"
edition = "2024"
description = "Rust rewrite of ncdu — NCurses Disk Usage analyzer"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/SV-stark/rusdu"
homepage = "https://github.com/SV-stark/rusdu"
exclude = ["rusdu_rewrite_plan.md", ".github/**"]

[dependencies]
lexopt = "0.3"
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = { version = "0.27", features = ["events"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
rayon = "1.8"
jwalk = "0.8"
bitflags = "2.4"
globset = "0.4"
dirs = "5.0"
natord = "1.0.9"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
unicode-width = "0.1"
log = "0.4"
env_logger = "0.10"
ciborium = "0.2"
notify = "7.0.0"
sysinfo = "0.34.2"


[target.'cfg(unix)'.dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_SystemServices"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
